--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,24 @@
 services:
   redis:
     image: redis:7-alpine
+    restart: always
     # Set a size limit. See link below on how to customise.
     # https://redis.io/docs/manual/eviction/
     # command: redis-server --maxmemory 1gb --maxmemory-policy allkeys-lru
 
   app:
-    image: cupcakearmy/cryptgeon:latest
+    image: acrcryptgeonfc001.azurecr.io/cryptgeon:latest
     depends_on:
       - redis
+    restart: always
     environment:
       # Size limit for a single note.
-      SIZE_LIMIT: 4 MiB
+      SIZE_LIMIT: 200 MiB
+      THEME_IMAGE: https://www.silaexpert01.fr/welcome.png
+      THEME_TEXT: "Envoyez des notes et des fichiers chiffrés."
+      THEME_LANGUAGE: FR
+      THEME_FAVICON: https://www.silae.fr/wp-content/themes/silae/assets/favicon/favicon-32x32.png
+      THEME_PAGE_TITLE: "Mysecret"
     ports:
       - 80:8000
 
